--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,59 +14,78 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EventsActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".MarksActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".AttendanceActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".TimeTableActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".FacultyActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".ScannerActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".SyllabusActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".DepartmentActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".AssignmentActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".NotesActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:hardwareAccelerated="true"/>
-        <activity android:name=".SemSelAssignment"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".SemSelAttn"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".SemSelTT"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".SemSelMarks"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".SemSelSyl"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".GalleryActivity"
-                  android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".CreditsActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
-        <activity android:name=".SupportActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:screenOrientation="portrait"/>
+        <activity
+            android:name=".EventsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MarksActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AttendanceActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TimeTableActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".FacultyActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ScannerActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SyllabusActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DepartmentActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AssignmentActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".NotesActivity"
+            android:hardwareAccelerated="true"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SemSelAssignment"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SemSelAttn"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SemSelTT"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SemSelMarks"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SemSelSyl"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".GalleryActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".CreditsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SupportActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".FeedbackActivity"></activity>
     </application>
 
 </manifest>
